Loading from classloader is working